--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "email": "anubhav.srivastava00@gmail.com"
   },
   "dependencies": {
+    "font-awesome": "^4.7.0",
+    "font-awesome-icons": "^1.6.0",
     "gatsby": "^2.4.3",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^2.1.0",
@@ -20,7 +22,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
     "react-scrollspy": "^3.4.0",
+    "simple-icons": "^1.11.0",
     "smoothscroll-polyfill": "^0.4.4"
   },
   "scripts": {
